@startuml

title __MAINMENUFX's Class Diagram__\n

  namespace MainMenuFX {
    class MainMenuFX.Main {
        {static} + main()
        + start()
    }
  }
  

  namespace MainMenuFX {
    class MainMenuFX.MainController {
        ~ exit : Button
        ~ login : Button
        ~ signup : Button
        + initialize()
        - setExit()
    }
  }
  

  MainMenuFX.Main -up-|> javafx.application.Application
  MainMenuFX.Main o-- Database.FirebaseService : firebase
  MainMenuFX.MainController .up.|> javafx.fxml.Initializable
  MainMenuFX.MainController o-- Tools.Navigate : x


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
